--- a/client/src/components/cart/Cart.scss
+++ b/client/src/components/cart/Cart.scss
@@ -26,7 +26,7 @@
     animation: cartSlider 0.3s ease forwards;
     transform: translateX(100%);
 
-    .header{
+    .header {
       height: 60px;
       display: flex;
       justify-content: space-between;
@@ -34,35 +34,53 @@
       padding-inline: 8px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 
-      .close-btn{
+      .close-btn {
         display: flex;
         align-items: center;
         gap: 4px;
         cursor: pointer;
         font-weight: 500;
 
-        &:hover{
+        &:hover {
           opacity: 0.6;
         }
 
-        &:active{
+        &:active {
           opacity: 1;
         }
       }
     }
 
-    .checkout-info{
+    .empty-cart-info {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin: 20px;
+      align-items: center;
+      justify-content: center;
+
+      .icon {
+        font-size: 3rem;
+        color: var(--secondary-text-color);
+      }
+
+      h4 {
+        color: var(--secondary-text-color);
+      }
+    }
+
+    .checkout-info {
       margin-top: 40px;
       padding-inline: 8px;
       border-top: 1px solid rgba(0, 0, 0, 0.5);
 
-      .total-amount{
+      .total-amount {
         display: flex;
         align-items: center;
         justify-content: space-between;
       }
 
-      .checkout{
+      .checkout {
         margin: 16px 8px;
       }
     }
@@ -70,15 +88,15 @@
 }
 
 @keyframes cartSlider {
-    0%{
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 @media screen and (max-width: 480px) {
-    .cart .cart-content {
-        width: 100%;
-    }
+  .cart .cart-content {
+    width: 100%;
+  }
 }
