--- a/client/src/components/collection/Collection.scss
+++ b/client/src/components/collection/Collection.scss
@@ -1,4 +1,4 @@
-.categories {
+.Collection {
     width: 32%;
     aspect-ratio: 16/9;
     background-image: url('../../assets/poster.jpeg');
@@ -23,14 +23,14 @@
 }
 
 @media screen and (max-width: 768px) {
-    .categories {
+    .Collection {
         width: 48%;
     }
     
 }
 
 @media screen and (max-width: 480px) {
-    .categories {
+    .Collection {
         width: 100%;
     }
     
