--- a/client/src/pages/category/Category.scss
+++ b/client/src/pages/category/Category.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  .content{
+  .content {
     margin-top: 40px;
     display: flex;
     gap: 20px;
@@ -40,16 +40,20 @@
       padding: 12px;
       height: fit-content;
 
-      h3{
+      h3 {
         margin-block: 8px;
       }
 
-      .filter-radio{
+      .filter-radio {
         margin-block: 8px;
 
-        input{
-            margin-right: 8px;
-            accent-color: var(--accent-color);
+        label{
+        cursor: pointer;
+      }
+
+        input {
+          margin-right: 8px;
+          accent-color: var(--accent-color);
         }
       }
     }
@@ -65,17 +69,17 @@
 }
 @media screen and (max-width: 480px) {
   .category {
-      .header {
-          flex-direction: column;
-          gap: 20px;
+    .header {
+      flex-direction: column;
+      gap: 20px;
 
-          .sort-by {
-              justify-content: start;
-          }
+      .sort-by {
+        justify-content: start;
       }
-      .content {
-          flex-direction: column;
-          gap: 20px;
-      }
+    }
+    .content {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 }
