Clearing cart after payments

--- a/client/src/pages/checkoutForm/CheckoutForm.scss
+++ b/client/src/pages/checkoutForm/CheckoutForm.scss
@@ -87,7 +87,7 @@
     }
   
     button {
-      background-color: #3399cc;
+      background-color: var(--accent-color);
       color: #fff;
       padding: 10px;
       border-radius: 4px;
